<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:src="@drawable/movie_place_holder" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_genre"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="Action, Adventure, Sci-Fi" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_released"
                        app:layout_constraintTop_toBottomOf="@id/movie_genre"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="13 Jun 2008" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_rated"
                        app:layout_constraintTop_toBottomOf="@id/movie_released"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="PG-13" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_runtime"
                        app:layout_constraintTop_toBottomOf="@id/movie_rated"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_margin="8dp"
                        android:layout_marginBottom="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        tools:text="112 min" />
                    <androidx.appcompat.widget.AppCompatImageView
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:tint="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_btn_favorite"
                        android:layout_margin="16dp"
                        tools:src="@drawable/ic_favorite_border_white_24dp"
                        android:contentDescription="@string/movie_item_btn_favorite_desc" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/director_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/movie_director"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Louis Leterrier" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/writer_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/movie_writer"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Zak Penn (screenplay), Zak Penn (screen story), Stan Lee (Marvel comic book), Jack Kirby (Marvel comic book)" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/actors_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/movie_actors"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Edward Norton, Liv Tyler, Tim Roth, William Hurt" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:text="@string/plot_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/movie_plot"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Bruce Banner, a scientist on the run from the U.S. Government, must find a cure for the monster he turns into whenever he loses his temper." />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>